# codey

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
src/: agent.rs  app.rs  main.rs  tools.rs  ui.rs
src/tools/: list_files.rs  read_file.rs  run_command.rs  search_files.rs  search_text_in_files.rs  write_file.rs
