[package]
name = "codey"
version = "0.0.1"
edition = "2024"

[dependencies]
ratatui = { version = "0.26", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
indexmap = "=2.2.6"
url = "=2.5.0"
dotenvy = "0.15.7"
